Add endpoint to get the answer to a question
